# ML

./: README.md  create_files.sh  create_project_structure.sh  tempCodeRunnerFile.sh
LibraryName/: CMakeLists.txt
LibraryName/LibraryName/anomaly_detection/: IsolationForest.h  OneClassSVM.h
LibraryName/LibraryName/bayesian_learning/: BayesianNetworks.h
LibraryName/LibraryName/classification/: DecisionTrees.h  KNN.h  SVM.h
LibraryName/LibraryName/clustering/: DBSCAN.h  HierarchicalClustering.h
LibraryName/LibraryName/dimensionality_reduction/: ICA.h  LDA.h  SVD.h
LibraryName/LibraryName/ensemble_learning/: Bagging.h  Boosting.h
LibraryName/LibraryName/genetic_algorithms/: EvolutionaryStrategies.h
LibraryName/LibraryName/instance_based/: CaseBasedReasoning.h
LibraryName/LibraryName/neural_networks/: Autoencoders.h  CNN.h  LSTM.h  MLP.h  RNN.h
LibraryName/LibraryName/other/: FewShotLearning.h  OrdinalRegression.h  SVR.h
LibraryName/LibraryName/regression/: LassoRegression.h  LinearRegression.h  LogisticRegression.h  RidgeRegression.h
LibraryName/LibraryName/reinforcement_learning/: DQN.h  PolicyGradient.h  TemporalDifference.h
LibraryName/LibraryName/semi_supervised/: CoTraining.h  GANs.h
LibraryName/python/: LibraryName.cpp
LibraryName/src/anomaly_detection/: AutoencoderAnomaly.cpp  EllipticEnvelope.cpp  IsolationForest.cpp  LOF.cpp  OneClassSVM.cpp
LibraryName/src/bayesian_learning/: BayesianNetworks.cpp  BayesianOptimization.cpp  GaussianNaiveBayes.cpp  NaiveBayes.cpp
LibraryName/src/classification/: DecisionTrees.cpp  GradientBoosting.cpp  KNN.cpp  NaiveBayes.cpp  RandomForest.cpp  SVM.cpp
LibraryName/src/clustering/: DBSCAN.cpp  GMM.cpp  HierarchicalClustering.cpp  KMeans.cpp  MeanShift.cpp
LibraryName/src/dimensionality_reduction/: Autoencoders.cpp  ICA.cpp  LDA.cpp  PCA.cpp  SVD.cpp  TSNE.cpp  UMAP.cpp
LibraryName/src/ensemble_learning/: Bagging.cpp  Boosting.cpp  Stacking.cpp
LibraryName/src/genetic_algorithms/: DifferentialEvolution.cpp  EvolutionaryStrategies.cpp  GeneticProgramming.cpp  SGA.cpp
LibraryName/src/instance_based/: CaseBasedReasoning.cpp  KNN.cpp  LocallyWeightedLearning.cpp
LibraryName/src/neural_networks/: Autoencoders.cpp  CNN.cpp  GAN.cpp  LSTM.cpp  MLP.cpp  RNN.cpp  Transformers.cpp
LibraryName/src/other/: FewShotLearning.cpp  MultiTaskLearning.cpp  OrdinalRegression.cpp  SVR.cpp  ZeroShotLearning.cpp
LibraryName/src/regression/: ElasticNetRegression.cpp  LassoRegression.cpp  LinearRegression.cpp  LogisticRegression.cpp  PolynomialRegression.cpp  RidgeRegression.cpp
LibraryName/src/reinforcement_learning/: DQN.cpp  MonteCarlo.cpp  PolicyGradient.cpp  QLearning.cpp  TemporalDifference.cpp
LibraryName/src/semi_supervised/: CoTraining.cpp  GANs.cpp  SelfTraining.cpp
LibraryName/tests/anomaly_detection/: test_AutoencoderAnomaly.cpp  test_EllipticEnvelope.cpp  test_IsolationForest.cpp  test_LOF.cpp  test_OneClassSVM.cpp
LibraryName/tests/bayesian_learning/: test_BayesianNetworks.cpp  test_BayesianOptimization.cpp  test_GaussianNaiveBayes.cpp  test_NaiveBayes.cpp
LibraryName/tests/classification/: test_DecisionTrees.cpp  test_GradientBoosting.cpp  test_KNN.cpp  test_NaiveBayes.cpp  test_RandomForest.cpp  test_SVM.cpp
LibraryName/tests/clustering/: test_DBSCAN.cpp  test_GMM.cpp  (+3 more)
SKLEARN/: CMakeLists.txt
SKLEARN/python/: SKLEARN.cpp
(+446 files in other folders)
